--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -1,27 +1,33 @@
 #loginbox {
-    margin: 200px auto auto auto;
-    min-width: 200px;
-    max-width: 400px;
+  margin: 200px auto auto auto;
+  min-width: 200px;
+  max-width: 400px;
 }
 
 #quizbox {
-    margin: 100px 100px 100px 100px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  margin: 100px 100px 100px 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .titleText {
-    font-weight: bold;
-    font-size: 1.5em;
+  font-weight: bold;
+  font-size: 1.5em;
 }
 
 #timer {
-    vertical-align: middle;
-    color: red;
-    font-weight: bold;
-    font-size: 1.5em;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  vertical-align: middle;
+  color: red;
+  font-weight: bold;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+@media print {
+  .doNotPrint {
+    display: none !important;
+  }
 }
