--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -26,6 +26,19 @@
   flex-direction: column;
 }
 
+.imgBorder {
+  border-radius: 15%;
+  border-style: solid;
+  border-width: 5px;
+}
+
+.qImgBorder {
+  border-radius: 15%;
+  border-style: solid;
+  border-width: 5px;
+  border-color: grey;
+}
+
 @media print {
   .doNotPrint {
     display: none !important;
