reshuffle combined questions in case first three always in same type

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -303,7 +303,7 @@
 
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
-  <img height="50" alt="Ideal Concepts Logo" src="/assets/idc_logo.png" />
+  <img height="50" alt="Ideal Concepts Logo" src="/assets/idc_logo.png" (click)="reDoTest()"/>
   <span class="doNotPrint">Welcome to test</span>
 
 </div>
